1999-11-17  David Lazaro Saz  <khelekir@encomix.es>

	* Source/NSWindow.m ([NSWindow -setLevel:]):
	Removed orderWindow:RelativeTo: message that made impossible to setup
	the window level before displaying the window.

	* Source/NSApplication.m ([NSApplication -setMainMenu:]): The window
	level for the main menu is set here to NSMainMenuWindowLevel.  The old
	main menu window level is reverted to NSSubmenuWindowLevel.

	* Source/NSMenu.m ([NSMenu -initWithTitle:]): Changed init code to take
	into account changes made in the NSMenuWindow class.
	([NSMenuWindow -init]): This is the main init method for this class.
	It is responsible of setting the window level to NSSubmenuWindowLevel.

	* Model/GMAppKit.m (NSMenu, NSMenuItem): Added preliminary changes to
	support new menuing code.

Wed Nov 17  1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSBox.m ([-isOpaque]): Added method.
	* Source/NSBrowser.m ([-isOpaque]): Added method.
	* Source/NSBrowserCell.m ([-isOpaque]): Added method.
	* Source/NSButtonCell.m ([-isOpaque]): Updated.
	* Source/NSColorWell.m ([-isOpaque]): Added method.
	* Source/NSControl.m ([-isOpaque]): Added method.
	* Source/NSFormCell.m ([-isOpaque]): Improved.
	* Source/NSMatrix.m ([-isOpaque]): Added method.
	* Source/NSSliderCell.m ([-isOpaque]): Added method.
	* Source/NSTabView.m ([-isOpaque]): Added method.
	* Source/NSText.m ([-isOpaque]): Added method.
	* Source/NSTextFieldCell.m ([-isOpaque]): Added method.
	* Source/NSTextFieldCell.m: Tiny optimization by using _isOpaque.
	* Headers/AppKit/NSTextFieldCell.h: Added ivar _isOpaque.
	
	* Source/NSCell.m ([-drawInteriorWithFrame:inView:]): Removed
	[unused] drawing of background.  Now the drawing is minimal, but
 	easier to subclass.  ([-setUpFieldEditorAttributes:]): Removed 
	setting of background.
	* Source/NSBrowserCell.m ([-editWithFrame:inView:editor:delegate:
	event:]), ([-endEditing:]), ([-_handleKeyEvent:]): Useless, removed.